--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.23.0",
+    "bootstrap": "5.1.3",
     "cra-template": "1.1.2",
+    "node-sass": "4",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3"
   },
