--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.23.0",
     "bootstrap": "5.1.3",
     "cra-template": "1.1.2",
