--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.2",
     "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
